# esy-rust-cargo-example

./: .gitignore
myclib/: Readme.md  esy.json  main.c
myclib/esy.lock/: index.json
mylib/: Cargo.toml
mylib/esy.lock/: index.json
mylib/src/: lib.rs
myocamllib/: Readme.md  esy.json  main.ml  stubs.c
myocamllib/esy.lock/: index.json
myrustlib/: Readme.md  package.json
myrustlib/esy.lock/: index.json
myrustlib/headers/: foobar.h
myrustlib/src/: lib.rs
